[package]
name = "lazy-init"
authors = ["Kyle Huey <khuey@kylehuey.com>"]
description = "Lazy initialization."
keywords = ["lazy", "initialization"]
license = "Apache-2.0/MIT"
repository = "https://github.com/khuey/lazy-init"
documentation = "https://docs.rs/lazy-init/~0.5.1"
version = "0.5.1"

[dev-dependencies]
rayon = "1"
